[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Viraat", email = "viraat.laldas@gmail.com"},
]
dependencies = [
    "selenium~=3.141",
]
requires-python = ""
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
